--- a/Common.Julius.LoggerComponent/Common.Julius.LoggerComponent/Common.Julius.LoggerComponent.csproj
+++ b/Common.Julius.LoggerComponent/Common.Julius.LoggerComponent/Common.Julius.LoggerComponent.csproj
@@ -31,11 +31,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=5.2.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\DLL\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.ServiceModel.Web">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -46,9 +60,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="01Log\LogBusiness.cs" />
+    <Compile Include="01Log\LogManager.cs" />
+    <Compile Include="02Factory\AppKeySettings.cs" />
+    <Compile Include="04FileDAL\TMAppException.cs" />
+    <Compile Include="06Helper\IPAddressHelper.cs" />
+    <Compile Include="06Helper\JsonHelper.cs" />
+    <Compile Include="02Factory\ConfigMonitor.cs" />
+    <Compile Include="02Factory\ConnectionFactory.cs" />
+    <Compile Include="02Factory\DALFactory.cs" />
+    <Compile Include="06Helper\FileHelper.cs" />
+    <Compile Include="05IDAL\IAppException.cs" />
+    <Compile Include="01Log\FileLoging.cs" />
+    <Compile Include="01Log\ILoging.cs" />
+    <Compile Include="01Log\Logging.cs" />
+    <Compile Include="01Log\LogingThread.cs" />
+    <Compile Include="07Model\MAppException.cs" />
+    <Compile Include="07Model\ExceptionLevel.cs" />
+    <Compile Include="03MySQLDAL\DMAppException.cs" />
+    <Compile Include="08TextAccess\TextDataAccess.cs" />
+    <Compile Include="09VModel\GlobalLog.cs" />
+    <Compile Include="09VModel\LogType.cs" />
     <Compile Include="TrackID.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrackIDManager.cs" />
+    <Compile Include="09VModel\AppException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
