--- a/HelpWeb/Help.Common.ViewModel/Help.Common.ViewModel.csproj
+++ b/HelpWeb/Help.Common.ViewModel/Help.Common.ViewModel.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttributeNode.cs" />
     <Compile Include="HttpClientExtensions.cs" />
     <Compile Include="PagedList.cs" />
     <Compile Include="IPagedList.cs" />
