--- a/HelpWeb/HelpWeb/HelpWeb.csproj
+++ b/HelpWeb/HelpWeb/HelpWeb.csproj
@@ -197,6 +197,10 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="javaTemplate\javaModel01.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\GenerateCoder\JaveConvertCSharpPage.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -231,6 +235,7 @@
     <Content Include="Views\ServiceRoute\Pager.cshtml" />
     <Content Include="Views\RoleInfo\Index.cshtml" />
     <Content Include="Views\UserInfo\UserInfoManage.cshtml" />
+    <Content Include="Views\GenerateCoder\JaveConvertCSharpPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
