--- a/HelpWeb/HelpWeb/Views/Web.config
+++ b/HelpWeb/HelpWeb/Views/Web.config
@@ -26,6 +26,7 @@
   </appSettings>
 
   <system.web>
+    <httpRuntime requestValidationMode="2.0" />
     <httpHandlers>
       <add path="*" verb="*" type="System.Web.HttpNotFoundHandler"/>
     </httpHandlers>
