--- a/HelpWeb/HelpWeb/HelpWeb.csproj
+++ b/HelpWeb/HelpWeb/HelpWeb.csproj
@@ -303,7 +303,6 @@
     <Content Include="Content\layui-v1.0.2\文档与演示\在线演示.url" />
     <Content Include="Content\layui-v1.0.2\文档与演示\快速上手.url" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
-    <Content Include="Scripts\GenerateCoder\JaveConvertCSharpPage.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -318,6 +317,7 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\RoleInfo\Index.js" />
     <Content Include="Scripts\UserInfo\UserInfoManage.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config">
@@ -345,7 +345,6 @@
     <Folder Include="Controllers\" />
     <Folder Include="javaTemplate\" />
     <Folder Include="Models\" />
-    <Folder Include="Scripts\RoleInfo\" />
     <Folder Include="Upload\" />
   </ItemGroup>
   <ItemGroup>
