--- a/HelpWeb/HelpWeb/Web.config
+++ b/HelpWeb/HelpWeb/Web.config
@@ -21,6 +21,9 @@
 
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-HelpWeb-20160113104216;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-HelpWeb-20160113104216.mdf" />
+
+    <add name="TRSDbServer" connectionString="Server=cnshasqluwv040:50000;Database=PWCTest;UID=db2admin;PWD=Jzbank1234" />
+
   </connectionStrings>
 
 
