--- a/HelpWeb/TestMain/App.config
+++ b/HelpWeb/TestMain/App.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <connectionStrings>
+    <add name="TRSDbServer" connectionString="Server=cnshasqluwv040:50000;Database=PWCTest;UID=db2admin;PWD=Jzbank1234" />
+
+  </connectionStrings>
 </configuration>
