--- a/HelpWeb/Help.DBAccessLayer.IDAL/Help.DBAccessLayer.IDAL.csproj
+++ b/HelpWeb/Help.DBAccessLayer.IDAL/Help.DBAccessLayer.IDAL.csproj
@@ -39,8 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="IGetSchema.cs" />
+    <Compile Include="MDataBaseType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Help.DBAccessLayer.Model\Help.DBAccessLayer.Model.csproj">
+      <Project>{739a4717-4144-49d6-aebe-cf7e428e548b}</Project>
+      <Name>Help.DBAccessLayer.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
