--- a/HelpWeb/Help.DBAccessLayer.Model/Help.DBAccessLayer.Model.csproj
+++ b/HelpWeb/Help.DBAccessLayer.Model/Help.DBAccessLayer.Model.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{56070205-2B64-40BA-8BAC-06147C6B8D7C}</ProjectGuid>
+    <ProjectGuid>{739A4717-4144-49D6-AEBE-CF7E428E548B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Help.DBAccessLayer.Factory</RootNamespace>
-    <AssemblyName>Help.DBAccessLayer.Factory</AssemblyName>
+    <RootNamespace>Help.DBAccessLayer.Model</RootNamespace>
+    <AssemblyName>Help.DBAccessLayer.Model</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,7 +31,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,21 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectionFactory.cs" />
-    <Compile Include="DALFactory.cs" />
-    <Compile Include="MDataBaseType.cs" />
-    <Compile Include="MDBAccessType.cs" />
+    <Compile Include="MTableDesc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Help.DBAccessLayer.DB2DAL\Help.DBAccessLayer.DB2DAL.csproj">
-      <Project>{7b7e2b82-ea9d-4f4f-a979-d2881cd55175}</Project>
-      <Name>Help.DBAccessLayer.DB2DAL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Help.DBAccessLayer.IDAL\Help.DBAccessLayer.IDAL.csproj">
-      <Project>{4833d0e7-5516-4793-bedc-836f2cce6589}</Project>
-      <Name>Help.DBAccessLayer.IDAL</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
