--- a/HelpWeb/HelpWeb/HelpWeb.csproj
+++ b/HelpWeb/HelpWeb/HelpWeb.csproj
@@ -355,6 +355,26 @@
       <Project>{81d876f8-c007-4abe-a508-992b76da0c69}</Project>
       <Name>Help.Common.ViewModel</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.Business\Help.DBAccessLayer.Business.csproj">
+      <Project>{251d9501-872b-428d-b815-da756a43a087}</Project>
+      <Name>Help.DBAccessLayer.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.DB2DAL\Help.DBAccessLayer.DB2DAL.csproj">
+      <Project>{7b7e2b82-ea9d-4f4f-a979-d2881cd55175}</Project>
+      <Name>Help.DBAccessLayer.DB2DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.Factory\Help.DBAccessLayer.Factory.csproj">
+      <Project>{56070205-2b64-40ba-8bac-06147c6b8d7c}</Project>
+      <Name>Help.DBAccessLayer.Factory</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.IDAL\Help.DBAccessLayer.IDAL.csproj">
+      <Project>{4833d0e7-5516-4793-bedc-836f2cce6589}</Project>
+      <Name>Help.DBAccessLayer.IDAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.Model\Help.DBAccessLayer.Model.csproj">
+      <Project>{739a4717-4144-49d6-aebe-cf7e428e548b}</Project>
+      <Name>Help.DBAccessLayer.Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Help.ServiceRoute.Business\Help.ServiceRoute.Business.csproj">
       <Project>{b5621836-ea1b-45ce-bf7e-8854fa62a4bb}</Project>
       <Name>Help.ServiceRoute.Business</Name>
