--- a/HelpWeb/TestMain/App.config
+++ b/HelpWeb/TestMain/App.config
@@ -4,7 +4,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="TRSDbServer" connectionString="Server=cnshasqluwv040:50000;Database=PWCTest;UID=db2admin;PWD=Jzbank1234" />
+    <add name="TRSDbServer" connectionString="Server=10.157.107.11:50000;Database=PWCTest;UID=db2admin;PWD=Jzbank1234" />
 
   </connectionStrings>
 </configuration>
