--- a/HelpWeb/TestMain/TestMain.csproj
+++ b/HelpWeb/TestMain/TestMain.csproj
@@ -49,7 +49,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Help.Common.APIModel\Help.Common.APIModel.csproj">
@@ -63,6 +65,26 @@
     <ProjectReference Include="..\Help.Component.DataBase\Help.Component.DataBase.csproj">
       <Project>{11c0621e-77c7-443c-b588-bd33b578510e}</Project>
       <Name>Help.Component.DataBase</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.Business\Help.DBAccessLayer.Business.csproj">
+      <Project>{251d9501-872b-428d-b815-da756a43a087}</Project>
+      <Name>Help.DBAccessLayer.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.DB2DAL\Help.DBAccessLayer.DB2DAL.csproj">
+      <Project>{7b7e2b82-ea9d-4f4f-a979-d2881cd55175}</Project>
+      <Name>Help.DBAccessLayer.DB2DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.Factory\Help.DBAccessLayer.Factory.csproj">
+      <Project>{56070205-2b64-40ba-8bac-06147c6b8d7c}</Project>
+      <Name>Help.DBAccessLayer.Factory</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.IDAL\Help.DBAccessLayer.IDAL.csproj">
+      <Project>{4833d0e7-5516-4793-bedc-836f2cce6589}</Project>
+      <Name>Help.DBAccessLayer.IDAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.Model\Help.DBAccessLayer.Model.csproj">
+      <Project>{739a4717-4144-49d6-aebe-cf7e428e548b}</Project>
+      <Name>Help.DBAccessLayer.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
