--- a/HelpWeb/Help.DBAccessLayer.DB2DAL/Help.DBAccessLayer.DB2DAL.csproj
+++ b/HelpWeb/Help.DBAccessLayer.DB2DAL/Help.DBAccessLayer.DB2DAL.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBUtil.cs" />
     <Compile Include="DGetSchema.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
