--- a/HelpWeb/Help.DBAccessLayer.Model/Help.DBAccessLayer.Model.csproj
+++ b/HelpWeb/Help.DBAccessLayer.Model/Help.DBAccessLayer.Model.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MColumn.cs" />
     <Compile Include="MTableDesc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
