--- a/HelpWeb/Help.DBAccessLayer.Factory/Help.DBAccessLayer.Factory.csproj
+++ b/HelpWeb/Help.DBAccessLayer.Factory/Help.DBAccessLayer.Factory.csproj
@@ -42,8 +42,6 @@
   <ItemGroup>
     <Compile Include="ConnectionFactory.cs" />
     <Compile Include="DALFactory.cs" />
-    <Compile Include="MDataBaseType.cs" />
-    <Compile Include="MDBAccessType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -54,6 +52,10 @@
     <ProjectReference Include="..\Help.DBAccessLayer.IDAL\Help.DBAccessLayer.IDAL.csproj">
       <Project>{4833d0e7-5516-4793-bedc-836f2cce6589}</Project>
       <Name>Help.DBAccessLayer.IDAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.Model\Help.DBAccessLayer.Model.csproj">
+      <Project>{739a4717-4144-49d6-aebe-cf7e428e548b}</Project>
+      <Name>Help.DBAccessLayer.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
