--- a/HelpWeb/Help.ServiceRoute.Business/Help.ServiceRoute.Business.csproj
+++ b/HelpWeb/Help.ServiceRoute.Business/Help.ServiceRoute.Business.csproj
@@ -87,6 +87,14 @@
       <Project>{11c0621e-77c7-443c-b588-bd33b578510e}</Project>
       <Name>Help.Component.DataBase</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.Business\Help.DBAccessLayer.Business.csproj">
+      <Project>{251d9501-872b-428d-b815-da756a43a087}</Project>
+      <Name>Help.DBAccessLayer.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.Model\Help.DBAccessLayer.Model.csproj">
+      <Project>{739a4717-4144-49d6-aebe-cf7e428e548b}</Project>
+      <Name>Help.DBAccessLayer.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
