mysql 分页查询完成

--- a/HelpWeb/Help.DBAccessLayer.Model/Help.DBAccessLayer.Model.csproj
+++ b/HelpWeb/Help.DBAccessLayer.Model/Help.DBAccessLayer.Model.csproj
@@ -43,6 +43,8 @@
     <Compile Include="MDataBaseType.cs" />
     <Compile Include="MDBAccessType.cs" />
     <Compile Include="MTableDesc.cs" />
+    <Compile Include="PagerQueryModel\MPagerInParam.cs" />
+    <Compile Include="PagerQueryModel\MPagerReturn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
