--- a/HelpWeb/TestMain/App.config
+++ b/HelpWeb/TestMain/App.config
@@ -6,5 +6,6 @@
   <connectionStrings>
     <add name="TRSDbServer" connectionString="Server=10.157.107.11:50000;Database=PWCTest;UID=db2admin;PWD=Jzbank1234" />
 
+    <add name="UsermanagedbRead" connectionString="server=127.0.0.1;database=Usermanagedb;charset=utf8;uid=root;pwd=root" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
