--- a/HelpWeb/TestMain/TestMain.csproj
+++ b/HelpWeb/TestMain/TestMain.csproj
@@ -52,6 +52,9 @@
     <None Include="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Test.xlsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Help.Common.APIModel\Help.Common.APIModel.csproj">
