--- a/HelpWeb/Help.Common.Service/Help.Common.Service.csproj
+++ b/HelpWeb/Help.Common.Service/Help.Common.Service.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{251D9501-872B-428D-B815-DA756A43A087}</ProjectGuid>
+    <ProjectGuid>{96F0DAB3-8CC8-4FE0-95A5-25FB86407EBC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Help.DBAccessLayer.Business</RootNamespace>
-    <AssemblyName>Help.DBAccessLayer.Business</AssemblyName>
+    <RootNamespace>Help.Common.Service</RootNamespace>
+    <AssemblyName>Help.Common.Service</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="IBM.Data.DB2, Version=9.7.4.4, Culture=neutral, PublicKeyToken=7c307b91aa13d208, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\DLL\IBM.Data.DB2.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,27 +39,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BGetSchema.cs" />
-    <Compile Include="BPagerQuery.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\PagerService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Help.DBAccessLayer.DB2DAL\Help.DBAccessLayer.DB2DAL.csproj">
-      <Project>{7b7e2b82-ea9d-4f4f-a979-d2881cd55175}</Project>
-      <Name>Help.DBAccessLayer.DB2DAL</Name>
+    <ProjectReference Include="..\Help.Common.APIModel\Help.Common.APIModel.csproj">
+      <Project>{b18cbea3-0f33-417e-99f8-cba645ebd573}</Project>
+      <Name>Help.Common.APIModel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Help.DBAccessLayer.Factory\Help.DBAccessLayer.Factory.csproj">
-      <Project>{56070205-2b64-40ba-8bac-06147c6b8d7c}</Project>
-      <Name>Help.DBAccessLayer.Factory</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Help.DBAccessLayer.IDAL\Help.DBAccessLayer.IDAL.csproj">
-      <Project>{4833d0e7-5516-4793-bedc-836f2cce6589}</Project>
-      <Name>Help.DBAccessLayer.IDAL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Help.DBAccessLayer.Model\Help.DBAccessLayer.Model.csproj">
-      <Project>{739a4717-4144-49d6-aebe-cf7e428e548b}</Project>
-      <Name>Help.DBAccessLayer.Model</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="IContract\" />
+    <Folder Include="Model\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
