--- a/HelpWeb/Help.DBAccessLayer.Factory/Help.DBAccessLayer.Factory.csproj
+++ b/HelpWeb/Help.DBAccessLayer.Factory/Help.DBAccessLayer.Factory.csproj
@@ -30,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IBM.Data.DB2, Version=9.7.4.4, Culture=neutral, PublicKeyToken=7c307b91aa13d208, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\DLL\IBM.Data.DB2.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\DLL\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -56,6 +64,10 @@
     <ProjectReference Include="..\Help.DBAccessLayer.Model\Help.DBAccessLayer.Model.csproj">
       <Project>{739a4717-4144-49d6-aebe-cf7e428e548b}</Project>
       <Name>Help.DBAccessLayer.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Help.DBAccessLayer.MySQLDAL\Help.DBAccessLayer.MySQLDAL.csproj">
+      <Project>{d8c6a94a-2854-49a4-8ce7-61876b967ed2}</Project>
+      <Name>Help.DBAccessLayer.MySQLDAL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
