--- a/HelpWeb/Help.DBAccessLayer.MySQLDAL/Help.DBAccessLayer.MySQLDAL.csproj
+++ b/HelpWeb/Help.DBAccessLayer.MySQLDAL/Help.DBAccessLayer.MySQLDAL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{251D9501-872B-428D-B815-DA756A43A087}</ProjectGuid>
+    <ProjectGuid>{D8C6A94A-2854-49A4-8CE7-61876B967ED2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Help.DBAccessLayer.Business</RootNamespace>
-    <AssemblyName>Help.DBAccessLayer.Business</AssemblyName>
+    <RootNamespace>Help.DBAccessLayer.MySQLDAL</RootNamespace>
+    <AssemblyName>Help.DBAccessLayer.MySQLDAL</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="IBM.Data.DB2, Version=9.7.4.4, Culture=neutral, PublicKeyToken=7c307b91aa13d208, processorArchitecture=x86">
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\DLL\IBM.Data.DB2.dll</HintPath>
+      <HintPath>..\DLL\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,19 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BGetSchema.cs" />
-    <Compile Include="BPagerQuery.cs" />
+    <Compile Include="DPagerQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Help.DBAccessLayer.DB2DAL\Help.DBAccessLayer.DB2DAL.csproj">
-      <Project>{7b7e2b82-ea9d-4f4f-a979-d2881cd55175}</Project>
-      <Name>Help.DBAccessLayer.DB2DAL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Help.DBAccessLayer.Factory\Help.DBAccessLayer.Factory.csproj">
-      <Project>{56070205-2b64-40ba-8bac-06147c6b8d7c}</Project>
-      <Name>Help.DBAccessLayer.Factory</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Help.DBAccessLayer.IDAL\Help.DBAccessLayer.IDAL.csproj">
       <Project>{4833d0e7-5516-4793-bedc-836f2cce6589}</Project>
       <Name>Help.DBAccessLayer.IDAL</Name>
