角色管理页面完工

--- a/HelpWeb/packages/repositories.config
+++ b/HelpWeb/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\Help.Common.Service\packages.config" />
   <repository path="..\Help.EF.UsermanageDB\packages.config" />
   <repository path="..\HelpWeb\packages.config" />
+  <repository path="..\TestMain\packages.config" />
 </repositories>
