--- a/HelpWeb/HelpWeb/HelpWeb.csproj
+++ b/HelpWeb/HelpWeb/HelpWeb.csproj
@@ -338,9 +338,11 @@
     <Content Include="Content\bootstrap3.3.5\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap3.3.5\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Content\bootstrap3.3.5\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\less\Samples\BaiduEcharts.less" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\common\jquery.min.js" />
     <Content Include="Scripts\DBCreater\SQLGenerator.js" />
+    <Content Include="Scripts\echarts.min.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
